modules/es-extensions/publisher/extensions/app/greg-publisher-defaults/themes/default/css/common.css
/* ... */
.inverse h1 {
    color: #fff;
}

.page-header.no-border {
    border-bottom: none;
    padding-bottom: 0;
}

.inverse .page-header {
    border-bottom-color: #bbb;
}

.page-header > h1 {
    margin-bottom: 0;
    padding-bottom: 0;
}

.page-header > .lead {
    font-size: 16px;
    color: #bbb;
    margin-bottom: 5px;
}

@media (min-width: 768px) {
    .page-header > .lead {
        font-size: 19px;
    }
}

.inverse hr {
    opacity: 0.1;
}

.wr-auth a {
    color: #fff;
    text-decoration: none;
}

.wr-auth .dropdown-menu-content {
    background-color: #4F5050; 
}

.footer {
    background: #161616;
    color: #fff;
}

.footer .fw {
    font-size: 21px;
}

.footer p {
    margin: 5px 0;
}

.footer a {
    text-decoration: none;
    color: #fff;
}

textarea { width: 100%; min-height: 100%; }

.wrapper { position: relative; }

.well {
    border-radius: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.nav {
    background-color: #237bd5;
}

.btn {
    border-radius: 0;
}

.col-centered {
    float: none;
    margin: 0 auto;
}

.wr-main-content {
    padding: 50px;
    margin-left: 3px;
    margin-top: 50px;
}

.loading:before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 10;
    background-color: #fff;
    opacity: 0.8;
}

.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
    color: #fff;
}

a.cu-btn, a.cu-btn-inner {
	color:#fff;
	text-decoration: none;
	font-weight:100;
	display: inline-block;
	text-transform: uppercase;
    height: 53px;
    padding: 13px 10px;
}

a.cu-btn:hover {
	background-color: #132D45;
}

a.cu-btn-inner {
    color: #333;
    padding: 5px 10px;
    height: 35px;
}

a.cu-btn-inner:hover {
    background-color:#e4e4e4;
}

a.cu-btn-inner.inverse, .btn-primary, .btn-default {
    background: #2c313b !important;
    color: #fff !important;
    border: none;
}

/* Add an exception to buttons inside button group since when this applied can't distinguish two close buttons TODO: Need to refactor with STORE-1190 fix */
.top-common-btn-grp{
    color: #333 !important;
    background-color: #fff !important;
    border: 1px solid transparent !important;
    border-color: #ccc !important;
}

/* This style revert the override style in bootstrap dropdown menu in custom-theme.css TODO: Need to refactor with STORE-1190 fix */
.top-common-dropdown-menu {
    background: #fff !important;
    top: 100%;
    margin: 2px 0 0;
    background-clip: padding-box;
    border: 1px solid rgba(0, 0, 0, .15);
    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
}

a.cu-btn-inner.inverse:hover, .btn-primary:hover, .btn-default:hover {
    background: #4D5461  !important;
}

.top-common-btn-grp:hover {
    background: #DEE1E6 !important;
    background-color: rgb(222, 225, 230) !important;
}

.navbar-collapse {
    width: 100%;
    padding: 0;
}

.navbar-nav .pull-right a.cu-btn {
    padding-left: 20px !important;
}

a.cu-btn:hover {
	background-color: #132D45;
}

.wr-input-control {
    margin-bottom: 20px;
}

.disabled-area {
    opacity: 0.5;
}

.disabled-area * {
    outline: none;
}

/* enabled/disabled switch styles */
.wr-input-control.switch {
    display: inline-block;
    margin-right: 10px;
    cursor: pointer;
    position: relative;
}
.wr-input-control.switch  > input[type=checkbox] {
    position: absolute;
    opacity: 0;
}
.wr-input-control.switch .helper {
    padding-left: 52px;
    position: relative;
}

.wr-input-control.switch .text {
    display: none;
    margin-left: 5px;
    font-weight: 100;
}

.wr-input-control.switch input[type="checkbox"]:checked + .helper + .text {
    display: inline-block;
}

.wr-input-control.switch .helper:before {
    position: absolute;
    left: 0;
    top: 2px;
    display: block;
    content: "";
    width: 45px;
    height: 16px;
    cursor: pointer;
    background: #a6a6a6;
    margin-left: 2px;
    z-index: 1;
    border-radius: 8px;
}
.wr-input-control.switch input[type="checkbox"] + .helper:after {
    position: absolute;
    left: 22px;
    top: -2px;
    display: block;
    content: "";
    width: 24px;
    height: 24px;
    cursor: pointer;
    background: #237bd5;
    z-index: 2;
    border-radius: 12px;

    -webkit-transition: left 0.2s ease-in-out;
    -moz-transition: left 0.2s ease-in-out;
    -o-transition: left 0.2s ease-in-out;
    transition: left 0.2s ease-in-out;
}
.wr-input-control.switch input[type="checkbox"]:not(:checked) + .helper:after {
    left: 2px !important;
    background: #eaeaea;
    border: 1px #eaeaea solid;
}

.wr-input-control.switch input[type="checkbox"]:not(:checked) + .helper:before {
    background: #a6a6a6 !important;
}
.wr-input-control.switch input[type="checkbox"]:disabled + .helper:after {
    background: #a6a6a6 !important;
    outline: 2px #a6a6a6 solid !important;
}
.wr-input-control.switch input[type="checkbox"]:disabled + .helper:before {
    cursor: default !important;
    background: #e0e0e0 !important;
    outline: 2px #ccc solid !important;
}

/* panel styles */
.panel-group .panel {
	margin-bottom: 0;
    margin-top: 10px;
	border-radius: 0;
}

.panel {
	margin-bottom: 20px;
	background-color: transparent;
	border: 0 solid #ddd;
	border-radius: 0;
	-webkit-box-shadow: 0 0 0 rgba(0, 0, 0, .05);
	box-shadow: 0 0 0 rgba(0, 0, 0, .05);
}

.panel-default > .panel-heading {
	color: #fff;
	background-color: #999;
	border-color: #e4e4e4;
}

.panel-default > .panel-heading {
	color: #fff;
	background-color: #999;
	border-color: #e4e4e4;
}

.cu-acc-head-title {
	font-weight:400;
	font-size:22px;
}

.cu-acc-head-title:hover {
	text-decoration: none;
}

.panel-title a .fw-stack {
    font-size: 14px;
}

.panel-title a.collapsed .fw-arrow:before {
    content: "\e634";
}

.panel-title a {
	text-decoration: none;
}

.panel-heading {
/*	padding: 0 0 0 15px;*/
    padding: 0;
	border-bottom: 0 solid transparent;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
}
/* ... */

